- tests are now passing, unfortunately we needed to disable the jdk 17 preview