@@ -57,6 +57,8 @@
 	</licenses>
 	<properties>
 		<jdk.version>17</jdk.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<compiler-plugin.version>3.8.1</compiler-plugin.version>
 		<jar-plugin.version>3.2.0</jar-plugin.version>
 		<dependency-plugin.version>3.1.2</dependency-plugin.version>
@@ -71,6 +73,7 @@
 		<ognl.version>3.2.21</ognl.version>
 		<text-io.version>3.4.1</text-io.version>
 		<commons-text.version>1.9</commons-text.version>
+		<slf4j.version>2.0.0-alpha4</slf4j.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -104,9 +107,7 @@
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
+					<release>${jdk.version}</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -242,6 +243,22 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
 			<version>${commons-text.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 </project>
